# vellum

./: .gitignore  .gitmodules  .rules  ANALYSIS.md  CODE_WIKI.md  Cargo.toml  FRAMEWORK_DESIGN.md  README.md  README.zh-CN.md  moon.work
.github/workflows/: build.yml
crates/editor/: Cargo.toml
crates/editor/examples/: incremental_parse_harness.rs
crates/editor/src/: commands.rs  controller.rs  document.rs  layout.rs  lib.rs  session.rs  view.rs
crates/editor/src/core/: code_highlight.rs  controller.rs  display_map.rs  document.rs  markdown_highlight.rs  math_completion.rs  math_render.rs  mod.rs  quality.rs  syntax.rs  table.rs  text_ops.rs
crates/editor/src/ui/: command_adapter.rs  commands.rs  component_ui.rs  edit_ops.rs  file_ops.rs  input_bridge.rs  interaction.rs  layout.rs  math_completion_panel.rs  mod.rs  render.rs  session.rs  slash_command.rs  surface.rs  theme.rs  view.rs
crates/extension/: Cargo.toml
crates/extension-sdk/: Cargo.toml
crates/extension-sdk/src/: decoration.rs  event.rs  host.rs  lib.rs  manifest.rs  plugin.rs  tests.rs  ui.rs
crates/extension/src/: app_manifest.rs  app_runtime.rs  app_ui.rs  contributions.rs  event.rs  host.rs  lib.rs  manifest.rs  permissions.rs  registry.rs  tests.rs  ui.rs
crates/extension/src/hot_reload/: builder.rs  mod.rs  settings.rs  state.rs  watch.rs
crates/extension/wit/: animation.wit  environment.wit  gestures.wit  grid.wit  navigation.wit  vellum-editor.wit  vellum-extension.wit  vellum-gui.wit
crates/gpui-adapter/: Cargo.toml
crates/gpui-adapter/src/: animation_render.rs  bridge.rs  environment_render.rs  error.rs  event.rs  gesture_recognizer.rs  gesture_tests.rs  gpui_render.rs  grid_render.rs  lib.rs  navigation_render.rs  paint.rs  shared_element_render.rs  transition_render.rs  types.rs  widget.rs  window.rs  wit_host.rs
crates/gpui-adapter/wit/: vellum-gui.wit
crates/plugin/: Cargo.toml
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: decoration.rs  event.rs  host.rs  lib.rs  manifest.rs  plugin.rs  tests.rs  ui.rs
crates/plugin/src/: abi.rs  command.rs  decoration.rs  event.rs  lib.rs  manager.rs  memory.rs  protocol.rs  runtime.rs  tests.rs  ui.rs
crates/vellum/: Cargo.toml
crates/vellum-editor/: Cargo.toml
crates/vellum-editor/src/: lib.rs
crates/vellum-extension-compat/: Cargo.toml
crates/vellum-extension-compat/src/: lib.rs
crates/vellum-framework/: Cargo.toml
crates/vellum-framework/src/: lib.rs
crates/vellum-framework/wit/: vellum-framework.wit
crates/vellum-renderer-gpui/: Cargo.toml
crates/vellum-renderer-gpui/src/: lib.rs
crates/vellum-runtime/: Cargo.toml
crates/vellum-runtime/src/: lib.rs  plugin.rs  runtime.rs  ui.rs
crates/vellum-sdk/: moon.mod.json
crates/vellum-sdk/src/: app.mbt  lib.mbt  widget.mbt
crates/vellum-workspace/: Cargo.toml
crates/vellum-workspace/src/: lib.rs
crates/vellum/src/: logging.rs  main.rs  path.rs
crates/vellum/src/app/: command_palette.rs  commands.rs  document_io.rs  export.rs  frame.rs  framework.rs  layout.rs  mod.rs  preferences.rs  render.rs  webview.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
docs/: architecture.md  building.md  framework-comparison.md  gestures.md  gui-framework-guide.md  legacy-extension.md  moonbit-extension-guide.md  transitions.md
docs/readme/: demo-note.md
examples-extensions/markdown-lint/: Cargo.toml  extension.toml
examples-extensions/markdown-lint/src/: lib.rs
examples-extensions/moonbit-gui/: README.md  build.sh  moon.mod.json
examples-extensions/pomodoro/: build.sh  watch_build.sh  wit
examples/hello-world/: moon.mod.json
examples/hello-world/src/: app.mbt  counter.mbt  main.mbt
examples/legacy-extensions/: README.md
examples/legacy-extensions/markdown-lint/: Cargo.toml  extension.toml
examples/legacy-extensions/moonbit-gui/: README.md  build.sh  extension.toml
examples/legacy-extensions/pomodoro/: build.sh  extension.toml  moon.mod.json
examples/plugins/: README.md  build-all.sh
examples/plugins/counter/: build.sh  moon.mod.json  vellum.toml
moonbit/demos/: README.md  build-all.sh
moonbit/demos/markdown-editor/: build.sh  moon.mod.json  vellum.toml
moonbit/legacy-extensions/: README.md  build-extension.sh
moonbit/legacy-extensions/counter/: build.sh  extension.toml
moonbit/legacy-extensions/form/: moon.mod.json
moonbit/legacy-extensions/wit-counter/: extension.toml  moon.mod.json
moonbit/vellum-app-sdk/: README.md  moon.mod.json
moonbit/vellum-app-sdk/src/: lib.mbt  moon.pkg.json
moonbit/vellum-gui-sdk/: README.md  moon.mod.json  test_main.mbt  wit_integration.mbt.bak
moonbit/vellum-gui-sdk/apps/: README.md  build-all.sh
moonbit/vellum-plugin-sdk/: README.md  moon.mod.json
plugins/markdown-lint/: Cargo.toml
plugins/markdown-lint/src/: lib.rs
src/: app.rs  main.rs  path.rs
src/app/: commands.rs  document_io.rs  editing.rs  frame.rs  layout.rs  mod.rs  render.rs
src/editor/: document.rs  mod.rs
wit/: vellum-app.wit
wit/legacy/: transitions.wit  vellum-editor.wit
(+173 files in other folders)
