[package]
name = "vellum-extension"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
wasmtime = { version = "35", features = ["component-model"] }
wasmtime-wasi = "35"

[features]
default = []
gpui-adapter = ["dep:gpui-adapter"]

[dependencies.gpui-adapter]
path = "../gpui-adapter"
optional = true
