[package]
name = "vellum-extension"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
notify = "6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
wasmtime = { version = "35", features = ["component-model"] }
wasmtime-wasi = "35"

[features]
default = []
gpui-adapter = ["dep:gpui-adapter"]
hot-reload = []
gestures = ["gpui-adapter", "gpui-adapter/gestures"]
transitions = ["gpui-adapter", "gpui-adapter/transitions"]

[dependencies.gpui-adapter]
path = "../gpui-adapter"
optional = true
