[package]
name = "gpui-adapter"
version = "0.1.0"
edition = "2024"
description = "GPUI adapter for Vellum GUI Framework - bridges WASM components with GPUI rendering"

[features]
default = []
mock-gpui = ["dep:gpui", "dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
gpui = { version = "0.2.2", optional = true }
gpui-component = { version = "0.5.1", features = ["webview"], optional = true }
wasmtime = { version = "35", features = ["component-model"], optional = true }
wasmtime-wasi = { version = "35", optional = true }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

[lints.rust]
unsafe_code = "forbid"
