[package]
name = "Vellum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dirs = "6"
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["webview"] }
regex = "1"
rfd = "0.15"
vellum-editor = { path = "../vellum-editor" }
vellum-renderer-gpui = { path = "../vellum-renderer-gpui" }
vellum-runtime = { path = "../vellum-runtime" }
vellum-workspace = { path = "../vellum-workspace" }
